Another fix for code wrapping

--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -107,6 +107,7 @@ p code {
 }
 pre {
   word-break: normal;
+  word-wrap: normal;
   code {
     display: inline-block;
   }
